# emotion_streamlit_app

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose-single.yaml  emotion_net_class.py  hello.py  pyproject.toml  requirements.txt  streamlit_start.py
pages/: 1_распознавание_эмоций_на_фото.py  2_emotion_recognition_on_video.py  2_распознавание_эмоций_на_видео.py
